--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "homepage": "http://pranayraj.com/apps/barstock/",
   "dependencies": {
     "bootstrap": "^3.3.7",
+    "immutability-helper": "^2.2.2",
     "json-loader": "^0.5.4",
     "react": "^15.5.4",
     "react-bootstrap": "^0.31.0",
     "react-dom": "^15.5.4",
+    "react-router-dom": "^4.1.1",
     "webpack-dev-server": "^2.4.5"
   },
   "devDependencies": {
