--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "barstock",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://pranayraj.com/apps/barstock/",
+  "homepage": "https://pranayraj09.github.io/bar-stock",
   "dependencies": {
     "bootstrap": "^3.3.7",
     "immutability-helper": "^2.2.2",
@@ -14,12 +14,15 @@
     "webpack-dev-server": "^2.4.5"
   },
   "devDependencies": {
+    "gh-pages": "^1.0.0",
     "react-scripts": "0.9.5"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
